src/test/deca/context/valid/sansObjet/IfAccess.deca
{
    int a = 2020;
    if (a==2020){
        print("Hello");
    }
    else{
        a=2021;
    }
}