src/test/deca/context/invalid/sansObjet/BadIf2.deca
{
    int a=2020;
    if (a){
        println("Hello 2020");
    }
}